Changes for mobile navbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://kit.fontawesome.com/6e9b63d01e.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Scrubby's Laundrymat</title>
   </head>
   <body>
@@ -16,7 +20,13 @@
             <a href="#" class="logo"><i class="fas fa-tshirt"></i></a>
           </span>
         </div>
-        <div>
+        <div class="menu">
+          <span class="mobile">
+            <a href="#" class="mobile-button"
+              ><i class="fas fa-bars" onclick="toggleClass()"></i
+            ></a>
+          </span>
+
           <ul class="main-menu">
             <li class="nav-item">Services</li>
             <li class="nav-item">Location</li>
@@ -24,6 +34,13 @@
           </ul>
         </div>
       </nav>
+      <div>
+        <ul class="mobile-menu hidden" id="mob-menu" onclick="toggleClass()">
+          <li class="mobile-item">Services</li>
+          <li class="mobile-item">Location</li>
+          <li class="mobile-item">Contacts</li>
+        </ul>
+      </div>
     </header>
     <div id="slideshow">
       <img
