--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
       rel="stylesheet"
     />
+     <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="container">
@@ -47,7 +53,7 @@
         </ul>
       </section>
       <section id="services">
-        <h2>Services we offer</h2>
+        <h2>Services We Offer</h2>
         <div class="box1">
           <h4>Drop Off Service</h4>
           <p>Don't have time to do laundry. Just leave it with us.</p>
@@ -71,7 +77,7 @@
             Need to run to the Dry Cleaners? Scrubbys is your one-stop shop for
             all your dry cleaning needs.
           </p>
-          <p>Next day service available (not available after 5pm)</p>
+          <p>Next day service available (not available after 7pm)</p>
         </div>
       </section>
       <section id="convenient">
@@ -100,6 +106,35 @@
             alt="Cougars Logo"
         /></a>
       </section>
+      <footer id="footer">
+        <div class="address">
+          <h4>Address</h4>
+          <p class="para3">
+            
+              50 Burnside Road West <br />
+              Victoria, BC
+            
+          </p>
+          <p class="para3">(250) 389-1626</p>
+        </div>
+        <!-- end of address -->
+        <div class="hours">
+          <h4>Hours Of Operation</h4>
+          <p class="para3">Monday to Friday</p>
+          <p class="para3">8am to 8pm</p>
+        </div>
+        <!-- end of hours -->
+        <div class="social">
+          <h4>Social Links</h4>
+          <a href="www.facebook.com" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+          <a href="www.twitter.com" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+          <a href="www.instagram.com" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+        </div><!-- end of social -->
+      </footer>
+      <div class="credits">
+          <p><small>Created by Edwina Muir and Terence John</small></p>
+        </div>
     </div>
+    <!-- end of container -->
   </body>
 </html>
