--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
         alt="Closeup image of a washer"
       />
     </div>
+
+    <div id="map-area">
+      <iframe
+        id="map"
+        src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1323.1628635358054!2d-123.38582864043524!3d48.45027953829544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548f7374ceea4dff%3A0xbc0295fa3a641d8e!2s50+Burnside+Rd+W%2C+Victoria%2C+BC+V9A+1B5!5e0!3m2!1sen!2sca!4v1561924079662!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>"
+        width="600"
+        height="450"
+        frameborder="0"
+        style="border:0"
+        allowfullscreen
+      ></iframe>
+    </div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
