Updated responsive issues on main section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
       rel="stylesheet"
     />
-     <link
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
@@ -19,16 +19,18 @@
   </head>
   <body>
     <div class="container">
-      <section id="main">
+      <div id="main">
         <h1>Welcome to Scrubby's Laundromat</h1>
         <p class="para1">
           Scrubby's Laundromat has been in business for over 27 years
         </p>
         <p class="para2">
-          When you come to Scrubby's, you will find the best equipment that the
+          When you come to Scrubbys, you will find the best equipment that the
           industry has to offer.
         </p>
-        <br />
+      </div>
+
+      <div id="commercial">
         <h2>Commercial Washers and Dryers</h2>
         <p class="para2">
           We carry both Dexter and Maytag washers and dryers for your
@@ -36,24 +38,24 @@
           (including Queen and King), sleeping bags and anything to big to wash
           at home.
         </p>
-        <br />
 
-        <h3>Washers</h3>
+        <h3 class="washndry">Washers</h3>
         <ul class="wash">
           <li>Dexter Mega 60LBS (6 loads)</li>
           <li>Dexter Maxi 40LBS (4 loads)</li>
           <li>Dexter Triple loaders</li>
           <li>Maytag Single top loaders</li>
         </ul>
-        <br />
-        <h3>Dryers</h3>
+
+        <h3 class="washndry">Dryers</h3>
         <ul class="dry">
           <li>16 Dexter dryers (3 loads)</li>
           <li>Single Load Maytag Dryers</li>
         </ul>
-      </section>
-      <section id="services">
-        <h2>Services We Offer</h2>
+      </div>
+
+      <div id="services">
+        <h2 class="offer">Services We Offer</h2>
         <div class="box1">
           <h4>Drop Off Service</h4>
           <p>Don't have time to do laundry. Just leave it with us.</p>
@@ -79,15 +81,17 @@
           </p>
           <p>Next day service available (not available after 7pm)</p>
         </div>
-      </section>
-      <section id="convenient">
+      </div>
+
+      <div id="convenient">
         <p class="para2">
           For your convenience, we provide Wi-Fi, televisions and snacks. You
           will be pleasantly surprise with our prices. Any needed coin can be
           purchase with Interac, Visa or Mastercard.
         </p>
-      </section>
-      <section id="teamLogo">
+      </div>
+
+      <div id="teamLogo">
         <h3 class="official">OFFICAL LAUNDROMAT FOR THE</h3>
         <a href="http://saanichbraves.ca" target="_blank"
           ><img
@@ -105,15 +109,14 @@
             height="95px"
             alt="Cougars Logo"
         /></a>
-      </section>
+      </div>
+
       <footer id="footer">
         <div class="address">
           <h4>Address</h4>
           <p class="para3">
-            
-              50 Burnside Road West <br />
-              Victoria, BC
-            
+            50 Burnside Road West <br />
+            Victoria, BC
           </p>
           <p class="para3">(250) 389-1626</p>
         </div>
@@ -124,16 +127,23 @@
           <p class="para3">8am to 8pm</p>
         </div>
         <!-- end of hours -->
-        <div class="social">
+        <div id="social">
           <h4>Social Links</h4>
-          <a href="www.facebook.com" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-          <a href="www.twitter.com" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
-          <a href="www.instagram.com" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-        </div><!-- end of social -->
+          <a href="www.facebook.com" target="_blank"
+            ><i class="fab fa-facebook-f fa-lg"></i
+          ></a>
+          <a href="www.twitter.com" target="_blank"
+            ><i class="fab fa-twitter fa-lg"></i
+          ></a>
+          <a href="www.instagram.com" target="_blank"
+            ><i class="fab fa-instagram fa-lg"></i
+          ></a>
+        </div>
+        <!-- end of social -->
       </footer>
       <div class="credits">
-          <p><small>Created by Edwina Muir and Terence John</small></p>
-        </div>
+        <p><small>Created by Edwina Muir and Terence Johnson</small></p>
+      </div>
     </div>
     <!-- end of container -->
   </body>
