Included main section, footer and Scrubby Icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       <nav class="navbar">
         <div>
           <span class="logo">
-            <a href="#" class="logo"><i class="fas fa-tshirt"></i></a>
+            <a href="#" class="logo"
+              ><img
+                src="assets/Scrubbysv2.png"
+                width="85"
+                height="45"
+                alt="Scrubbys Logo"
+            /></a>
           </span>
         </div>
         <div class="menu">
@@ -62,14 +68,151 @@
       />
     </div>
 
-    <div id="map-area">
-      <iframe
-        id="map"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2646.3144162247263!2d-123.38819434876127!3d48.45049657914778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x699cb0bc30713386!2sScrubby&#39;s+Laundromat!5e0!3m2!1sen!2sca!4v1562527731082!5m2!1sen!2sca"
-        frameborder="0"
-        style="border:0"
-        allowfullscreen
-      ></iframe>
+    <div class="container">
+      <div id="main">
+        <h1>Welcome to Scrubby's Laundromat</h1>
+        <p class="para1">
+          Scrubby's Laundromat has been in business for over 27 years
+        </p>
+        <p class="para2">
+          When you come to Scrubbys, you will find the best equipment that the
+          industry has to offer.
+        </p>
+      </div>
+      <!-- end of main -->
+
+      <div id="commercial">
+        <h2>Commercial Washers and Dryers</h2>
+        <p class="para2">
+          We carry both Dexter and Maytag washers and dryers for your
+          convenience. All large capacity washers are great for comforters
+          (including Queen and King), sleeping bags and anything to big to wash
+          at home.
+        </p>
+
+        <h3 class="washndry">Washers</h3>
+        <ul class="wash">
+          <li>Dexter Mega 60LBS (6 loads)</li>
+          <li>Dexter Maxi 40LBS (4 loads)</li>
+          <li>Dexter Triple loaders</li>
+          <li>Maytag Single top loaders</li>
+        </ul>
+
+        <h3 class="washndry">Dryers</h3>
+        <ul class="dry">
+          <li>16 Dexter dryers (3 loads)</li>
+          <li>Single Load Maytag Dryers</li>
+        </ul>
+      </div>
+      <!-- end of commercial -->
+
+      <div id="services">
+        <h2 class="offer">Services We Offer</h2>
+        <div class="box1">
+          <h4>Drop Off Service</h4>
+          <p>Don't have time to do laundry. Just leave it with us.</p>
+          <p>
+            We will sort, wash, dry, fold and follow any special instructions
+            you give us.
+          </p>
+          <p>Same day or next day service available.</p>
+        </div>
+        <div class="box2">
+          <h4>Folding Service</h4>
+          <p>
+            Do you need us to watch your laundry, while you run errands. No
+            problem. We can transfer loads in/out of washers/dryers for you.
+          </p>
+          <p>Folding services are provided on site.</p>
+        </div>
+        <div class="box3">
+          <h4>Dry Cleaning</h4>
+          <p>
+            Need to run to the Dry Cleaners? Scrubbys is your one-stop shop for
+            all your dry cleaning needs.
+          </p>
+          <p>Next day service available (not available after 7pm)</p>
+        </div>
+      </div>
+      <!-- end of services -->
+
+      <div id="convenient">
+        <p class="para2">
+          For your convenience, we provide Wi-Fi, televisions and snacks. You
+          will be pleasantly surprise with our prices. Any needed coin can be
+          purchase with Interac, Visa or Mastercard.
+        </p>
+      </div>
+      <!-- end of convenient -->
+
+      <div id="teamLogo">
+        <h3 class="official">OFFICAL LAUNDROMAT FOR THE</h3>
+        <a href="http://saanichbraves.ca" target="_blank"
+          ><img
+            class="logo1"
+            src="assets/alumni-braves.png"
+            width="118px"
+            height="110px"
+            alt="Junior Braves Logo"
+        /></a>
+        <a href="http://www.victoriacougars.com/" target="_blank"
+          ><img
+            class="logo2"
+            src="assets/cougars-logo.png"
+            width="95px"
+            height="95px"
+            alt="Cougars Logo"
+        /></a>
+      </div>
+      <!-- end of Team Logo-->
+
+      <div
+        id="map-area"
+        style="padding-bottom:56.25%; position:relative; display:block; width: 100%"
+      >
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1323.1628635358054!2d-123.38582864043524!3d48.45027953829544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548f7374ceea4dff%3A0xbc0295fa3a641d8e!2s50+Burnside+Rd+W%2C+Victoria%2C+BC+V9A+1B5!5e0!3m2!1sen!2sca!4v1561924079662!5m2!1sen!2sca"
+          width="100%"
+          height="100%"
+          frameborder="0"
+          allowfullscreen
+          style="position:absolute; top:2px; left:0"
+        ></iframe>
+      </div>
+
+      <footer id="footer">
+        <div class="address">
+          <h4>Address</h4>
+          <p class="para3">
+            50 Burnside Road West <br />
+            Victoria, BC
+          </p>
+          <p class="para3">(250) 389-1626</p>
+        </div>
+        <!-- end of address -->
+        <div class="hours">
+          <h4>Hours Of Operation</h4>
+          <p class="para3">Monday to Friday</p>
+          <p class="para3">8am to 8pm</p>
+        </div>
+        <!-- end of hours -->
+        <div id="social">
+          <h4>Social Links</h4>
+          <a href="www.facebook.com" target="_blank"
+            ><i class="fab fa-facebook-f fa-lg"></i
+          ></a>
+          <a href="www.twitter.com" target="_blank"
+            ><i class="fab fa-twitter fa-lg"></i
+          ></a>
+          <a href="www.instagram.com" target="_blank"
+            ><i class="fab fa-instagram fa-lg"></i
+          ></a>
+        </div>
+        <!-- end of social -->
+      </footer>
+      <div class="credits">
+        <p><small>Created by Edwina Muir and Terence Johnson</small></p>
+      </div>
     </div>
 
     <script src="js/scripts.js"></script>
